# lab2

./: .gitignore
lab_a/: CMakeLists.txt  X16.cpp  X16.h  a.files  a.includes  functions.cpp  functions.h  lab2_a.sln  lab2_a.vcxproj  lab2_a.vcxproj.filters  main.cpp
lab_a/Debug/lab2_a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2_a.lastbuildstate
lab_a/Test_a/: CMakeLists.txt  Test_a.vcxproj  test.cpp
lab_a/Test_a/x64/Debug/: Test_a.vcxproj.FileListAbsolute.txt
lab_a/Test_a/x64/Debug/Test_a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test_a.read.1u.tlog  Test_a.write.1u.tlog  link.command.1.tlog  (+2 more)
lab_a/aa/: CMakeLists.txt  functions.h  main.cpp
lab_a/aa/Test_a/: CMakeLists.txt
lab_a/aa/lib/: CMakeLists.txt
lab_a/build-aa-Desktop_Qt_5_15_1_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  build.ninja
lab_a/build-aa-Desktop_Qt_5_15_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  build.ninja
lab_a/lib/: X16.cpp  X16.h
lab_a/x64/Debug/: CodeAnalysisResultManifest.txt  Test_a.exe.gta.testdurations  Test_a.ilk  X16.nativecodeanalysis.sarif  X16.nativecodeanalysis.xml  functions.nativecodeanalysis.sarif  lab2_a.ilk  lab2_a.vcxproj.FileListAbsolute.txt  main.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc142.idb
lab_a/x64/Debug/lab2_a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  lab2_a.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab_b/: CMakeLists.txt  X16.cpp  X16.h  main.cpp
lab_b/lib/: CMakeLists.txt  X16.cpp
lab_b/test_b/: CMakeLists.txt  test.cpp
(+47 files in other folders)
